--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,8 @@
     <string name="choose_gender">Choose Gender</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_new">Add new</string>
+    <string name="add">Add</string>
+    <string name="enter_name">Enter Name</string>
+    <string name="father_name">Father Name</string>
 </resources>
